--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
                     <div class="footer-col">
                         <h4>Address</h4>
-                        <a href="" class="email">muhdfattahh@gmail.com</a>
+                        <a href="" class="email">kioeswahyuwaraqt@gmail.com</a>
                     </div>
                     <div class="footer-col">
                         <h4>Follow us</h4>
