--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             >
                         </div>
                     </div>
-                    <img src="/Photo/K.png" alt="" class="right-rev" />
+                    <img src="Photo/K.png" alt="" class="right-rev" />
                 </div>
                 <div class="isi-3-home">
                     <div class="kolom-3-home">
