--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="kolom-produk left-rev">
                     <h3>wanna see more?</h3>
                     <a href="">click here</a>
-                    <img src="/Photo/L2.png" alt="" class="bottom-rev" />
+                    <img src="Photo/L2.png" alt="" class="bottom-rev" />
                 </div>
             </div>
         </section>
@@ -194,7 +194,7 @@
                             placeat optio quas fuga laudantium ipsa quo quasi
                             nobis obcaecati, incidunt sunt quod.
                         </p>
-                        <img src="/Photo/S.png" alt="" class="right-rev" />
+                        <img src="Photo/S.png" alt="" class="right-rev" />
                     </div>
                 </div>
             </div>
